shopflow/manifests/istio/peer-authentification.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: shopflow-dev
spec:
  mtls:
    mode: STRICT
