shopflow/manifests/istio/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service
  namespace: shopflow-dev
spec:
  hosts:
    - "shopflow.local"
    - product-service
  gateways:
    - shopflow-gateway
  http:
    - match:
      - uri:
          prefix: /products
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure #networkfailure + erreur 500
        # also use idempotency key for POST request that create something to avoid double spending
      route:
        - destination:
            host: product-service
            subset: v1
          weight: 90
        - destination:
            host: product-service
            subset: v2
          weight: 10
